Migrate to java 17